Added simple finder.